remove unnecessary code in post.html

--- a/views/home.html
+++ b/views/home.html
@@ -58,7 +58,7 @@
         <div class="divide">
             <div class="_container">
                 <div class="-line1"></div>
-                <a href="{{ link_to(WebsiteTagGroup) }}" class="-text primary">See all latest news</a>
+                <a href="{{ link_to(WebsiteCategory) }}" class="-text primary">See all latest news</a>
                 <div class="-line2"></div>
             </div>
         </div>
