--- a/views/home.html
+++ b/views/home.html
@@ -3,6 +3,23 @@
 {% block content %}
     <!-- Main-->
     <div class="main">
+
+    {# Lấy resource đầu tiên thuộc loại WebsiteCategory để làm ví dụ #}
+    {# {% set categoryResource = null %}
+    {% for resource in listData.getResources() %}
+        {% if resource.getModel() == 'Post' %}
+            {% set categoryResource = resource %}
+        {% endif %}
+
+    {% endfor %} #}
+
+    {# Hiển thị nút bấm nếu tìm thấy categoryResource #}
+    {# {% if categoryResource %}
+        <a href="{{ link_to(categoryResource) }}" class="btn btn-primary">Chuyển tới trang Category</a>
+    {% else %}
+        <p>Không tìm thấy resource loại WebsiteCategory.</p>
+    {% endif %} #}
+
         <!--Lastest News-->
         {% set latestData = listData.getResources() %}
         <div class="my_container section_flex border_bot">
@@ -58,92 +75,29 @@
         <div class="divide">
             <div class="_container">
                 <div class="-line1"></div>
-                <a href="{{ link_to(WebsiteCategory) }}" class="-text primary">See all latest news</a>
+                {% set category = WebsiteCategory.getResources() %}
+                <a href="{{ link_to(category) }}" class="-text primary">See all latest news</a>
                 <div class="-line2"></div>
             </div>
         </div>
 
         <!--newsletter-->
-        <div class="newsletter primary">
-            <div class="_container">
-                <p class="-title">Get the Technologylife newsletter</p>
-                <div class="-subcribe">
-                    <input type="text" placeholder="you@email.com" class="">
-                    <button class="">Subscribe</button>
-                </div>
-                <div class="-social">
-                    <p>follow us</p>
-                    <!--fb-icon-->
-                    <svg width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0_14_221)">
-                            <path
-                                d="M7.5 0.5C3.3579 0.5 0 3.8579 0 8C0 11.5172 2.4216 14.4686 5.6883 15.2792V10.292H4.1418V8H5.6883V7.0124C5.6883 4.4597 6.8436 3.2765 9.3498 3.2765C9.825 3.2765 10.6449 3.3698 10.9803 3.4628V5.5403C10.8033 5.5217 10.4958 5.5124 10.1139 5.5124C8.8842 5.5124 8.409 5.9783 8.409 7.1894V8H10.8588L10.4379 10.292H8.409V15.4451C12.1227 14.9966 15.0003 11.8346 15.0003 8C15 3.8579 11.6421 0.5 7.5 0.5Z"
-                                fill="white" />
-                        </g>
-                        <defs>
-                            <clipPath id="clip0_14_221">
-                                <rect width="15" height="15" fill="white" transform="translate(0 0.5)" />
-                            </clipPath>
-                        </defs>
-                    </svg>
-                    <!--twitter-->
-                    <svg width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M11.4539 1.68994H13.5624L8.95607 6.95462L14.375 14.1187H10.132L6.80877 9.77371L3.00622 14.1187H0.89652L5.8234 8.4875L0.625 1.68994H4.97569L7.97962 5.6614L11.4539 1.68994ZM10.7139 12.8567H11.8822L4.34087 2.88565H3.08716L10.7139 12.8567Z"
-                            fill="white" />
-                    </svg>
-                    <!--insta icon-->
-                    <svg width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0_14_219)">
-                            <path
-                                d="M7.5 1.85059C9.50391 1.85059 9.74121 1.85938 10.5293 1.89453C11.2617 1.92676 11.6572 2.04981 11.9209 2.15234C12.2695 2.28711 12.5215 2.45117 12.7822 2.71191C13.0459 2.97559 13.207 3.22461 13.3418 3.57324C13.4443 3.83691 13.5674 4.23535 13.5996 4.96484C13.6348 5.75586 13.6436 5.99317 13.6436 7.99414C13.6436 9.99805 13.6348 10.2354 13.5996 11.0234C13.5674 11.7559 13.4443 12.1514 13.3418 12.415C13.207 12.7637 13.043 13.0156 12.7822 13.2764C12.5186 13.54 12.2695 13.7012 11.9209 13.8359C11.6572 13.9385 11.2588 14.0615 10.5293 14.0938C9.73828 14.1289 9.50098 14.1377 7.5 14.1377C5.4961 14.1377 5.25879 14.1289 4.4707 14.0938C3.73828 14.0615 3.34277 13.9385 3.0791 13.8359C2.73047 13.7012 2.47852 13.5371 2.21777 13.2764C1.9541 13.0127 1.79297 12.7637 1.6582 12.415C1.55566 12.1514 1.43262 11.7529 1.40039 11.0234C1.36523 10.2324 1.35645 9.99512 1.35645 7.99414C1.35645 5.99024 1.36523 5.75293 1.40039 4.96484C1.43262 4.23242 1.55566 3.83691 1.6582 3.57324C1.79297 3.22461 1.95703 2.97266 2.21777 2.71191C2.48145 2.44824 2.73047 2.28711 3.0791 2.15234C3.34277 2.04981 3.74121 1.92676 4.4707 1.89453C5.25879 1.85938 5.4961 1.85059 7.5 1.85059ZM7.5 0.5C5.46387 0.5 5.20899 0.508789 4.40918 0.543945C3.61231 0.579102 3.06445 0.708008 2.58984 0.892578C2.09473 1.08594 1.67578 1.34082 1.25977 1.75977C0.840821 2.17578 0.585938 2.59473 0.392578 3.08691C0.208008 3.56445 0.0791016 4.10938 0.0439453 4.90625C0.00878907 5.70899 0 5.96387 0 8C0 10.0361 0.00878907 10.291 0.0439453 11.0908C0.0791016 11.8877 0.208008 12.4355 0.392578 12.9102C0.585938 13.4053 0.840821 13.8242 1.25977 14.2402C1.67578 14.6563 2.09473 14.9141 2.58691 15.1045C3.06445 15.2891 3.60938 15.418 4.40625 15.4531C5.20606 15.4883 5.46094 15.4971 7.49707 15.4971C9.53321 15.4971 9.78809 15.4883 10.5879 15.4531C11.3848 15.418 11.9326 15.2891 12.4072 15.1045C12.8994 14.9141 13.3184 14.6563 13.7344 14.2402C14.1504 13.8242 14.4082 13.4053 14.5986 12.9131C14.7832 12.4355 14.9121 11.8906 14.9473 11.0938C14.9824 10.2939 14.9912 10.0391 14.9912 8.00293C14.9912 5.9668 14.9824 5.71192 14.9473 4.91211C14.9121 4.11524 14.7832 3.56738 14.5986 3.09277C14.4141 2.59473 14.1592 2.17578 13.7402 1.75977C13.3242 1.34375 12.9053 1.08594 12.4131 0.895508C11.9355 0.710938 11.3906 0.582031 10.5938 0.546875C9.79102 0.508789 9.53614 0.5 7.5 0.5Z"
-                                fill="white" />
-                            <path
-                                d="M7.5 4.14746C5.37305 4.14746 3.64746 5.87305 3.64746 8C3.64746 10.127 5.37305 11.8525 7.5 11.8525C9.62695 11.8525 11.3525 10.127 11.3525 8C11.3525 5.87305 9.62695 4.14746 7.5 4.14746ZM7.5 10.499C6.12012 10.499 5.00098 9.37988 5.00098 8C5.00098 6.62012 6.12012 5.50098 7.5 5.50098C8.87988 5.50098 9.99902 6.62012 9.99902 8C9.99902 9.37988 8.87988 10.499 7.5 10.499Z"
-                                fill="white" />
-                            <path
-                                d="M12.4043 3.99512C12.4043 4.49317 12 4.89453 11.5049 4.89453C11.0068 4.89453 10.6055 4.49024 10.6055 3.99512C10.6055 3.49707 11.0098 3.0957 11.5049 3.0957C12 3.0957 12.4043 3.5 12.4043 3.99512Z"
-                                fill="white" />
-                        </g>
-                        <defs>
-                            <clipPath id="clip0_14_219">
-                                <rect width="15" height="15" fill="white" transform="translate(0 0.5)" />
-                            </clipPath>
-                        </defs>
-                    </svg>
-                    <!--tiktok icon-->
-                    <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
-                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-                        viewBox="0 0 24 24">
-                        <path fill-rule="evenodd"
-                            d="M12.51 8.796v1.697a3.738 3.738 0 0 1 3.288-1.684c3.455 0 4.202 2.16 4.202 4.97V19.5h-3.2v-5.072c0-1.21-.244-2.766-2.128-2.766-1.827 0-2.139 1.317-2.139 2.676V19.5h-3.19V8.796h3.168ZM7.2 6.106a1.61 1.61 0 0 1-.988 1.483 1.595 1.595 0 0 1-1.743-.348A1.607 1.607 0 0 1 5.6 4.5a1.601 1.601 0 0 1 1.6 1.606Z"
-                            clip-rule="evenodd" />
-                        <path d="M7.2 8.809H4V19.5h3.2V8.809Z" />
-                    </svg>
-                    <!--linkin icon-->
-                    <svg width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0_14_217)">
-                            <path
-                                d="M13.8896 0.5H1.10742C0.495117 0.5 0 0.983398 0 1.58105V14.416C0 15.0137 0.495117 15.5 1.10742 15.5H13.8896C14.502 15.5 15 15.0137 15 14.4189V1.58105C15 0.983398 14.502 0.5 13.8896 0.5ZM4.4502 13.2822H2.22363V6.12207H4.4502V13.2822ZM3.33691 5.14648C2.62207 5.14648 2.04492 4.56934 2.04492 3.85742C2.04492 3.14551 2.62207 2.56836 3.33691 2.56836C4.04883 2.56836 4.62598 3.14551 4.62598 3.85742C4.62598 4.56641 4.04883 5.14648 3.33691 5.14648ZM12.7822 13.2822H10.5586V9.80176C10.5586 8.97266 10.5439 7.90332 9.40137 7.90332C8.24414 7.90332 8.06836 8.80859 8.06836 9.74316V13.2822H5.84766V6.12207H7.98047V7.10059H8.00977C8.30566 6.53809 9.03223 5.94336 10.1133 5.94336C12.3662 5.94336 12.7822 7.42578 12.7822 9.35352V13.2822Z"
-                                fill="white" />
-                        </g>
-                        <defs>
-                            <clipPath id="clip0_14_217">
-                                <rect width="15" height="15" fill="white" transform="translate(0 0.5)" />
-                            </clipPath>
-                        </defs>
-                    </svg>
-
-                </div>
-            </div>
+        <div>
+            {% include 'components/news-letter.html' %}
         </div>
 
         <!--Category card-->
-        <div class="">
+        <div>
             {% include 'components/list-card-home.html' with { resources: listData.getResources() } %}
         </div>
 
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            console.log('{{ categoryResource.slug }}');
+        });
+    </script>
 
     
 {% endblock %}
