Add event listener to hide active links in main.js and update link URLs in recommend-list.html and home.html. Update pagination styling in _pagination.scss and remove pagination-test.html. Update pagination styling and link classes in pagination_tailwind.html. Update link URL in list-card-home.html. Update CSS link in default.html.

--- a/assets/scss/components/_pagination.scss
+++ b/assets/scss/components/_pagination.scss
@@ -13,3 +13,26 @@
         @apply w-full flex items-center justify-center border rounded border-gray-400 p-2;
     }
 }
+
+.custom-pagination{
+    li{
+        @apply hidden;
+    }
+
+    li:first-child{
+        @apply block w-full;
+        
+        a{
+            @apply w-full;
+        }
+    }
+
+    li:last-child{
+        @apply block w-full;
+
+        a{
+            @apply w-full;
+        }
+    }
+
+}
