--- a/views/components/recommend-list.html
+++ b/views/components/recommend-list.html
@@ -7,7 +7,7 @@
     {% set listCard = resources|slice(0,7) %}
      <!--items-->
     {% for cardItem in listCard %}
-    <a href="#" class="-items">
+    <a href="{{ cardItem.getLink() }}" class="-items">
         {% set thumbnailFile = cardItem.getThumbnailFile() %}
         <img src="{{ thumbnailFile ? image_resize(300, thumbnailFile) }}" alt="" class="">
         <div class="-content">
