--- a/views/components/list-card-home.html
+++ b/views/components/list-card-home.html
@@ -15,7 +15,7 @@
         {% set card1 = resources|slice(0,1) %}
         <div class="_main">
             {% for cardItem in card1 %}
-            <a href="#" class="-items">
+            <a href="{{ cardItem.getLink() }}" class="-items">
                 {% set thumbnailFile = cardItem.getThumbnailFile() %}
                 <img src="{{ thumbnailFile ? image_resize(300, thumbnailFile) }}" alt="" class="-img">
                 <div class="-title">
@@ -33,7 +33,7 @@
         {% set listCard = resources|slice(1,3) %}
         <div class="_right">
             {% for cardItem in listCard %}
-            <a href="#" class="-items">
+            <a href="{{ cardItem.getLink() }}" class="-items">
                 {% set thumbnailFile = cardItem.getThumbnailFile() %}
                 <img src="{{ thumbnailFile ? image_resize(300, thumbnailFile) }}" alt="" class="">
                 <p class="-title">
