--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ pageTitle }}</title>
-    <link href="{{ link_asset('css/style.min.css') }}?t={{ time() }}" rel="stylesheet" type="text/css"/>
+    <link href="{{ link_asset('css/style.min.css') }}?t={{ time() }}" rel="stylesheet" type="text/css" />
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,11 +25,13 @@
 <body>
     {% include 'partials/navbar.html' %}
     <div class="">
-      {{ block('content') }}  
+        {{ block('content') }}
     </div>
     {% include 'partials/footer.html' %}
+
+    <script src="{{ link_asset('js/main.js') }}"></script>
 
     {% include 'components/common_js.html' %}
 </body>
 
-</html> 
+</html>
