--- a/views/components/recommend-list.html
+++ b/views/components/recommend-list.html
@@ -1,27 +1,28 @@
-{% if resources %}
-<div class="recommended section_grid-col-1">
+<div x-data="list('/ajax/suggestions/{{ post.slug }}', true, 7)" class="recommended section_grid-col-1">
 
     <div class="">
         <h2>Recommended For You</h2>
     </div>
-    {% set listCard = resources|slice(0,7) %}
-     <!--items-->
-    {% for cardItem in listCard %}
-    <a href="{{ cardItem.getLink() }}" class="-items">
-        {% set thumbnailFile = cardItem.getThumbnailFile() %}
-        <img src="{{ thumbnailFile ? image_resize(300, thumbnailFile) }}" alt="" class="">
-        <div class="-content">
-            <div class="-title">
-                {{ cardItem.getTitle() }}
-            </div>
-            <div class="-author">
-                <span>Paul Sawers</span>
-                <span>.</span>
-                <span>Today</span>
-            </div>
-        </div>
-    </a>
-    {% endfor %}
+
+    <!--items-->
+    <div class="posts">
+        <template x-for="post in data" :key="post.id">
+            <a data-fetch-result x-for="post in data" :href="post.slug" class="-items mb-4">
+                <img :src="post.thumbnail_file_url" alt="" class="">
+                <div class="-content">
+                    <div x-text="post.title" class="-title"></div>
+                    <div class="-author">
+                        <span>Paul Sawers</span>
+                        <span>.</span>
+                        <span x-text="post.created_at"></span>
+                    </div>
+                </div>
+            </a>
+        </template>
+    </div>
+    
 
 </div>
-{% endif %}
+<script>
+    document.addEventListener('DOMContentLoaded', () => window.viewCount('{{ post.slug }}'))
+</script>
