--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -1,3 +1,34 @@
+{% if request.query('ajax') %}
+{% set posts = post_list() %}
+{% set data = { data: posts } %}
+{% set postsJson = [] %}
+{% for item in posts %}
+{% set thumbnailFile = model_relation(item, 'thumbnailFile') %}
+{% set thumbnailUrl = image_resize(300, thumbnailFile) ?: link_asset('images/demo/das-1.png') %}
+{% set subject = model_relation(item, 'subject') %}
+{% set tag = model_relation(item, 'websiteTags')%}
+
+{% set postsJson = postsJson|merge([
+{
+    title: item.title,
+    slug: item.slug,
+    description: item.description,
+    url: link_to(item),
+    thumbnail_file_url: thumbnailUrl,
+    tags: tag,
+    meta: {
+        episodeCurrent: subject.getMetaValue('episode_current'),
+        title: subject.title,
+        year: subject.getMetaValue('year'),
+        quality: subject.getMetaValue('quality'),
+    }
+}
+])%}
+{% endfor %}
+{% set data = { data: postsJson } %}
+{{ data|json_encode }}
+
+{% else %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,11 +37,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ pageTitle }}</title>
     <link href="{{ link_asset('css/style.min.css') }}?t={{ time() }}" rel="stylesheet" type="text/css" />
-    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    {# <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script> #}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
 
     {% include 'components/common_css.html' %}
@@ -24,14 +55,19 @@
 
 <body>
     {% include 'partials/navbar.html' %}
-    <div class="">
+    {% include 'components/loading.html' %}
+    <div id="content" style="display:none;">
         {{ block('content') }}
     </div>
+   
     {% include 'partials/footer.html' %}
 
-    <script src="{{ link_asset('js/main.js') }}"></script>
+    <script src="{{ link_asset('js/main.js') }}?t={{ time() }}" type="module"></script>
 
     {% include 'components/common_js.html' %}
+    
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 </body>
 
 </html>
+{% endif %}
