--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -1,9 +1,9 @@
 <div class="relative" x-data="{navbarMobile: false, closeBtnMobile: false, openBtnMobile: true}">
-    <div class="back-black" x-data="{openNavbarDropDown: false, btnNavbarDropDown: true}">
+    <div class="back-black" >
         <div class="navbar_base">
             <div class="my_container pt-4">
                 <div class="top-page flex">
-                    <a href="{{ link_to(website_category) }}">Technologylife</a>
+                    <a href="/">Technologylife</a>
                     <div class="-block"></div>
                 </div>
             </div>
@@ -11,28 +11,36 @@
                 <div class="_menu">
                     {% set mainMenu = menu_solve('main') %}
                     {% for menuItem in mainMenu %}
-
+                    {% set index = loop.index %}
                     {% if not menuItem.items %}
-                    <a href="{{ menuItem.link }}"  target="{{ menuItem.new_tab ? '_blank' : '' }}" class="-items">{{ menuItem.text }}</a>
+                    <a href="{{ menuItem.link }}" target="{{ menuItem.new_tab ? '_blank' : '' }}" class="-items">{{
+                        menuItem.text }} </a>
                     {% else %}
-                    <div href="" class="-items" x-on:click="openNavbarDropDown = !openNavbarDropDown, btnNavbarDropDown = false">
-                        
+                    <div href="" class="-items"
+                        x-data="{openNavbarDropDown{{index}}: false, btnNavbarDropDown{{index}}: true}"
+                        x-on:click="openNavbarDropDown{{index}} = !openNavbarDropDown{{index}}, btnNavbarDropDown{{index}} = false">
+
                         <div class="flex items-center justify-between">
                             {{ menuItem.text }}
-                            <svg x-show="btnNavbarDropDown" class="w-6 h-6" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
-                                height="24" fill="none" viewBox="0 0 24 24">
+                            <svg x-show="btnNavbarDropDown{{index}}" class="w-6 h-6" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                viewBox="0 0 24 24">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                     stroke-width="2" d="m19 9-7 7-7-7" />
                             </svg>
-                            <svg x-cloak x-show="openNavbarDropDown" class="w-6 h-6" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m5 15 7-7 7 7"/>
-                            </svg>      
+                            <svg x-cloak x-show="openNavbarDropDown{{index}}" class="w-6 h-6" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="m5 15 7-7 7 7" />
+                            </svg>
                         </div>
-    
-                        <div x-cloak class="-dropdown" x-show="openNavbarDropDown"
-                            x-on:click.outside="openNavbarDropDown = false, btnNavbarDropDown = true">
+
+                        <div x-cloak class="-dropdown" x-show="openNavbarDropDown{{index}}"
+                            x-on:click.outside="openNavbarDropDown{{index}} = false, btnNavbarDropDown{{index}} = true">
                             {% for subMenuItem in menuItem.items %}
-                            <a href="{{subMenuItem.link}}"  target="{{ menuItem.new_tab ? '_blank' : '' }}" class="-items">{{ subMenuItem.text }}</a>
+                            <a href="{{subMenuItem.link}}" target="{{ menuItem.new_tab ? '_blank' : '' }}"
+                                class="-items">{{ subMenuItem.text }}</a>
                             {% endfor %}
                         </div>
                     </div>
@@ -44,7 +52,7 @@
         <!--navbar mobile-->
         <div class="navbar_mobile">
             <div class="my_container navbar">
-                <h1>Technologylife</h1>
+                <a href="/">Technologylife</a>
                 <!--btn open menu-->
                 <div x-show="openBtnMobile" class="menu-icon"
                     x-on:click="navbarMobile = true, openBtnMobile = false, closeBtnMobile = true">
@@ -65,26 +73,30 @@
                 </div>
             </div>
             <!--menu mobile-->
-            <div x-cloak x-show="navbarMobile"
-                x-data="{menuLv2:false ,openMobileDropdown: true}"
+            <div x-cloak x-show="navbarMobile" 
+                x-data="{ {% for menuItem in mainMenu %}{% set index = loop.index %}menuLv2{{index}}:false ,openMobileDropdown{{index}}: true,{% endfor %} }"
                 x-on:click.outside="navbarMobile = false, openBtnMobile = true, closeBtnMobile = false" class="navmenu"
                 x-transition:enter="transition ease-out duration-300" x-transition:enter-start="transform opacity-0"
                 x-transition:enter-end="transform opacity-100" x-transition:leave="transition ease-in duration-300"
                 x-transition:leave-start="transform opacity-100" x-transition:leave-end="transform opacity-0">
                 <div class="-menu">
                     {% for menuItem in mainMenu %}
+                    {% set index = loop.index %}
                     {% if not menuItem.items %}
-                    <a href="{{ menuItem.link }}"  target="{{ menuItem.new_tab ? '_blank' : '' }}" class="-items">{{ menuItem.text }}</a>
+                    <a href="{{ menuItem.link }}" target="{{ menuItem.new_tab ? '_blank' : '' }}" class="-items">{{
+                        menuItem.text }}</a>
                     {% else %}
-                    <div class="-items" x-on:click="menuLv2 = true, openMobileDropdown = !openMobileDropdown">
-                        <svg x-show="openMobileDropdown" class="w-6 h-6" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
-                            height="24" fill="none" viewBox="0 0 24 24">
+                    <div class="-items" x-on:click="menuLv2{{index}} = true, openMobileDropdown{{index}} = !openMobileDropdown{{index}}">
+                        <svg x-show="openMobileDropdown{{index}}" class="w-6 h-6" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="m19 9-7 7-7-7" />
                         </svg>
-                        <svg x-cloak x-show="menuLv2" class="w-6 h-6" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m5 15 7-7 7 7"/>
-                        </svg>                      
+                        <svg x-cloak x-show="menuLv2{{index}}" class="w-6 h-6" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m5 15 7-7 7 7" />
+                        </svg>
                         <span>{{ menuItem.text }}</span>
                     </div>
                     {% endif %}
@@ -92,9 +104,11 @@
                 </div>
                 {% for menuItem in mainMenu %}
                 {% if menuItem.items %}
+                {% set index = loop.index %}
                 {% for subMenuItem in menuItem.items %}
-                <div x-show="menuLv2" class="-menulv2" x-on:click.outside="menuLv2 = false, openMobileDropdown = true">
-                    <a href="{{subMenuItem.link}}"  target="{{ menuItem.new_tab ? '_blank' : '' }}" class="-items">{{ subMenuItem.text }}</a>
+                <div x-show="menuLv2{{index}}" class="-menulv2" x-on:click.outside="menuLv2{{index}} = false, openMobileDropdown{{index}} = true">
+                    <a href="{{subMenuItem.link}}" target="{{ menuItem.new_tab ? '_blank' : '' }}" class="-items">{{
+                        subMenuItem.text }}</a>
                 </div>
                 {% endfor %}
                 {% endif %}
