--- a/views/components/list-card-tag.html
+++ b/views/components/list-card-tag.html
@@ -3,14 +3,14 @@
 
 {# <div id="posts-container"></div> #}
 <div class="my_container py-10 border_top">
-    <a href="#" class="section_title hover:underline">
+    <div class="section_title">
         <p class="">Deeptech</p>
         <svg class="w-6 h-6 angle-right" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
             height="24" fill="none" viewBox="0 0 24 24">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
                 d="m9 5 7 7-7 7" />
         </svg>
-    </a>
+    </div>
 
     <div class="section_flex pt-4">
         <!--left side-->
