--- a/views/components/list-card-tag.html
+++ b/views/components/list-card-tag.html
@@ -4,7 +4,7 @@
 {# <div id="posts-container"></div> #}
 <div class="my_container py-10 border_top">
     <div class="section_title">
-        <p class="">Deeptech</p>
+        <p class="">{{ tag_name }}</p>
         <svg class="w-6 h-6 angle-right" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
             height="24" fill="none" viewBox="0 0 24 24">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
@@ -17,7 +17,7 @@
         {% set card1 = resources|slice(0,1) %}
         <div class="_main">
             {% for cardItem in card1 %}
-            <a href="{{ cardItem.slug }}" class="-items">
+            <a href="{{ link_post(cardItem) }}" class="-items">
                 {% set thumbnailFile = model_relation(cardItem, 'thumbnailFile') %}
                 <img src="{{ thumbnailFile ? image_resize(300, thumbnailFile) }}" alt="" class="-img">
                 <div class="-title">
@@ -35,7 +35,7 @@
         {% set listCard = resources|slice(1,3) %}
         <div class="_right">
             {% for cardItem in listCard %}
-            <a href="{{ cardItem.slug }}" class="-items">
+            <a href="{{ link_post(cardItem) }}" class="-items">
                 {% set thumbnailFile = model_relation(cardItem, 'thumbnailFile') %}
                 <img src="{{ thumbnailFile ? image_resize(300, thumbnailFile) }}" alt="" class="">
                 <p class="-title">
