--- a/views/website_tag.html
+++ b/views/website_tag.html
@@ -21,8 +21,8 @@
             <div class="-content">
                 <h2>{{ latestItem.getTitle() }}</h2>
                 <div class="-author">
-                    <span>Brian</span>
-                    <span>.</span>
+                    {# <span>Brian</span>
+                    <span>.</span> #}
                     <span>
                         {% if latestItem.created_at|date("F j, Y") == today %}
                             Today
@@ -49,8 +49,8 @@
                     {{ latestItem.getTitle() }}
                 </div>
                 <div class="-author">
-                    <span>Paul Sawers</span>
-                    <span>.</span>
+                    {# <span>Paul Sawers</span>
+                    <span>.</span> #}
                     <span>
                         {% if latestItem.created_at|date("F j, Y") == today %}
                             Today
@@ -75,8 +75,8 @@
                     {{ latestItem.getTitle() }}
                 </div>
                 <div class="-author">
-                    <span>Paul Sawers</span>
-                    <span>.</span>
+                    {# <span>Paul Sawers</span>
+                    <span>.</span> #}
                     <span>
                         {% if latestItem.created_at|date("F j, Y") == today %}
                             Today
