Update common.scss and list-card-tag.html

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -77,7 +77,7 @@ body {
 .section_title{
     @apply flex items-center gap-2;
 
-    .-link{
+    .-text{
        @apply text-2xl font-semibold
     }
 
