--- a/views/components/list-card-tag.html
+++ b/views/components/list-card-tag.html
@@ -4,12 +4,16 @@
 {# <div id="posts-container"></div> #}
 <div class="my_container py-10 border_top">
     <div class="section_title">
-        <a href="{{link_to(catLink)}}" class="-link ">{{ tag_name }}</a>
+        {% if catLink is not empty %} 
+        <a href="{{link_to(catLink)}}" class="-text hover:underline">{{ tag_name }}</a>
         <svg class="w-6 h-6 angle-right" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
             height="24" fill="none" viewBox="0 0 24 24">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"
                 d="m9 5 7 7-7 7" />
         </svg>
+        {% else %}
+        <p class="-text">{{ tag_name }}</p>
+        {% endif %}
     </div>
 
     <div class="section_flex pt-4">
